wrap links correctly on mobile

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -15,6 +15,7 @@ ul {
 a {
   text-decoration: underline;
   color: inherit;
+  word-wrap: break-word;
 }
 
 #entry_block {
